<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    tools:showIn="navigation_view">    <group        android:checkableBehavior="single">        <item            android:id="@+id/nav_url"            android:icon="@drawable/ic_web"            android:title="@string/website" />        <item android:id="@+id/nav_logo"            android:icon="@drawable/ic_igniteicon"            android:title="@string/logo"            />        <item android:id="@+id/nav_brochure"            android:icon="@drawable/brochure"            android:title="@string/Brochure"            />        <item android:id="@+id/nav_bus"            android:icon="@drawable/bus"            android:title="@string/bus"            />        <item android:id="@+id/nav_dev"            android:icon="@drawable/ic_develop"            android:title="@string/dev"            />        <item android:id="@+id/nav_face"            android:icon="@drawable/ic_facebook"            android:title="LIKE US ON FACEBOOK"            />        <item android:id="@+id/nav_insta"            android:icon="@drawable/ic_instagram"            android:title="FOLLOW US ON INSTAGRAM"            />    </group></menu>